<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright [2013] [Ricardo García Fernández] [ricardogarfe@gmail.com]
 
 This file is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
 Foundation, either version 3 of the License, or (at your option) any later
 version.
 
 This file is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License along with
 this program. If not, see <http://www.gnu.org/licenses/>. 
-->

<resources>

    <string name="app_name">Mis Horarios</string>
    <string name="stationSalida">Departure</string>
    <string name="stationLlegada">Destination</string>
    <string name="tiempo">Duration</string>
    <string name="lineaSalida">Line</string>

    <!-- Nucleos view -->
    <string name="textNucleos">Nucleus</string>
    <string name="nucleosSearch">Search nucleus</string>

    <!-- Estacion Nucleos Layout -->
    <string name="seleccionEstaciones">Stations</string>
    <string name="estacionOrigenText">Departure station</string>
    <string name="estacionDestinoText">Destination station</string>
    <string name="verHorariosButton">Next train</string>
    <string name="dateTimeSelectButton">Date</string>
    <string name="retrievingStations">Retrieving stations</string>
    <string name="origen_destino">Departure and Destination stations can\'t be the same</string>

    <!-- Lineas -->
    <string name="retrievingLines">Retrieving Lines</string>

    <!-- Hoarios Cercanias Layout -->
    <string name="mostrarHorarios">Timetables</string>
    <string name="infoNucleo">Nucleus</string>
    <string name="infoStations">Departure station - Destination station</string>
    <string name="infoFecha">Date</string>
    <string name="buttonVuelta">Return timetable</string>

    <!-- Google Maps API key -->
    <string name="map_key">0Tp7WsIDiyqoDmSF9LMprvDzte-hj_A6r-qxbow</string>
    <string name="mapNucleosView">Stations</string>
    <string name="title_activity_nucleo_detail">Information</string>
    <string name="action_settings">Settings</string>

    <!-- Map View -->
    <string name="no_location_values">No values for line</string>

    <!-- Date time -->
    <string name="dateSliderTitle">Selected date</string>
    <string name="dateSliderSet">Timetables</string>
    <string name="dateSliderCancel">Cancel</string>

</resources>