<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright [2013] [Ricardo García Fernández] [ricardogarfe@gmail.com]
 
 This file is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
 Foundation, either version 3 of the License, or (at your option) any later
 version.
 
 This file is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License along with
 this program. If not, see <http://www.gnu.org/licenses/>.
 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewNucleo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/infoNucleo"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewInfoStations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/infoStations"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewInfoDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="3dp"
            android:text="@string/infoFecha"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonVuelta"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/buttonVuelta" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewInfoTransbordo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/scrollViewTableHorarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayoutHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000" >

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/stationSalida"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/stationLlegada"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/tiempo"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/lineaSalida"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>