<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright [2013] [Ricardo García Fernández] [ricardogarfe@gmail.com]
 
 This file is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
 Foundation, either version 3 of the License, or (at your option) any later
 version.
 
 This file is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License along with
 this program. If not, see <http://www.gnu.org/licenses/>. 
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutNucleo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imagen_tren"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginLeft="10dip"
            android:contentDescription="TODO"
            android:src="@drawable/imagen_tren" />

        <TextView
            android:id="@+id/nucleo_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="6dp"
            android:gravity="right"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/estacionOrigenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutNucleo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/estacionOrigenText"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearLayoutOrigen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/estacionOrigenText"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/origen_image"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginLeft="10dip"
            android:contentDescription="TODO"
            android:src="@drawable/icono_origen003" />

        <Spinner
            android:id="@+id/origenSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/estacionOrigenText" />
    </LinearLayout>

    <TextView
        android:id="@+id/estacionDestinoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutOrigen"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/estacionDestinoText"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearLayoutDestino"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/estacionDestinoText"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/destino_image"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginLeft="10dip"
            android:src="@drawable/icono_destino003" />

        <Spinner
            android:id="@+id/destinoSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/estacionDestinoText" />
    </LinearLayout>

    <Button
        android:id="@+id/verHorariosButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/verHorariosButton" />

</RelativeLayout>